test-suite/invalid/person-invalid-version.glx
# Invalid: Version field is missing
persons:
  person-12345678:
    concluded_identity:
      primary_name: "Test Person"
